fixed modal not showing when click to other section

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ nav input:hover {
 }
 
 .item img {
-  transition: 0.5s all ease;
+  transition: all 0.5s ease 0.2s;
 }
 .item:hover img {
   transform: scale(1.3);
